--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,3 +1,14 @@
+.medium-text-footer-social, .medium-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.footer-text, .small-text {
+  font-size: 16px;
+  line-height: 1.5;
+}
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -137,7 +148,6 @@ button {
 }
 
 .container {
-  /* width: 100%; */
   padding-left: 16px;
   padding-right: 16px;
 }
@@ -150,7 +160,7 @@ button {
     margin-right: auto;
   }
 }
-/* --- Planshet container ---- */
+/* --- Tablet container ---- */
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
@@ -797,7 +807,6 @@ button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  /* min-width: 165px; */
   height: 40px;
   -ms-flex-item-align: center;
       align-self: center;
