--- a/sass/index.scss
+++ b/sass/index.scss
@@ -2,6 +2,7 @@
 @import './utilities/is-hiden';
 @import './utilities/mixin';
 @import './utilities/placeholder';
+// @import './utilities/each';
 // Header
 @import './components/header/logo';
 @import './components/header/main-navigation';
