--- a/sass/utilities/_mixin.scss
+++ b/sass/utilities/_mixin.scss
@@ -10,3 +10,8 @@
     text-transform: uppercase;
 }
 
+@mixin section-pad($pad-top, $pad-bot) {
+    padding-top: $pad-top;
+    padding-bottom: $pad-bot;
+}
+
